# demo-app

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  deployment.yml  docker-image.yml  test.yml
test/: test_api.py
